# ProxyHTTP

./: .gitignore  CMakeLists.txt  Protocolo_v.1.0.txt  Protocolo_v.1.1.txt  README.md  admin  admin.c  admin.h  server  server.c
logger/: logger.c  logger.h
parser/: body.c  chunk.c  chunk.h  chunkGroup.c  chunkGroup.h  chunkGroup_test.c  funcionParaSegundito.c  header.c  header.h  headerGroup.c  headerGroup.h  headerGroup_test.c  method.c  method.h  multi_parser.c  multi_parser.h  parser.c  parserHostReqLine.c  parserHostReqLine.h  parserHostReqLine_test.c  parser_errorCodes.h  parsing_utils.c  parsing_utils.h  request.c  request.h  requestHeaders.c  requestLine.c  requestLine.h  requestLine_test.c  request_test.c  response.c  response.h  response_manager.c  response_manager.h  response_manager_test.c  response_test.c  statusLine.c  statusLine.h  statusLine_test.c
protocol/: adminApp.c  adminApp.h  adminApp_test.c  protocol.h
serverComponents/: admin-structure.h  adminActiveHandlers.c  adminActiveHandlers.h  adminPassiveHandlers.c  adminPassiveHandlers.h  adminStm.c  adminStm.h  connection-structure.h  maxFdHandler.c  maxFdHandler.h  metrics.c  metrics.h  proxyActiveHandlers.c  proxyActiveHandlers.h  proxyPassiveHandlers.c  proxyPassiveHandlers.h  proxyStm.c  proxyStm.h  transErrorManager.c  transErrorManager.h  transformationFork.c  transformationFork.h  transformationManager.c  transformationManager.h
serverComponents/adminStates/: adminErrorState.c  adminErrorState.h  adminReadState.c  adminReadState.h  adminWriteState.c  adminWriteState.h  authenticateReadState.c  authenticateReadState.h  authenticateWriteState.c  authenticateWriteState.h
serverComponents/adminStates/adminParser/: processAdminRequest.c  processAdminRequest.h
serverComponents/proxyStates/: errorState.c  errorState.h  obtainOriginState.c  obtainOriginState.h  requestState.c  requestState.h  responseState.c  responseState.h
utils/: mediatypes.h
utils/buffer/: buffer.h
utils/mediaTypes/: mediaRange.c  mediatypes.c  mediatypes.h
utils/parseRequests/: parseRequest.h
utils/parser/: body.c  body.h  body_test.c  chunk.c  chunk.h  chunkGroup.c  chunkGroup.h  chunk_test.c  funcionParaSegundito.c  header.c  header.h  headerGroup.c  headerGroup.h  headerGroup_test.c  header_test.c  identity.c  identity.h  method.c  method.h  method_test.c  multi_pareser_test.c  multi_parser.c  multi_parser.h  multi_parser_test.c  parser.h  parserHostReqLine.c  parserHostReqLine.h  parserHostReqLine_test.c  request.c  request.h  requestHeaders_test.c  requestLine.c  requestLine.h  requestLine_test.c  request_test.c  response.c  response.h  response_test.c  statusLine.c  statusLine.h  (+1 more)
utils/selector/: selector.c
utils/transformation/: transformation.c  transformation.h
